--- a/introduction-to-machine-learning-supervised-learning/cuboulder_SupervisedLearning_FinalProject.ipynb
+++ b/introduction-to-machine-learning-supervised-learning/cuboulder_SupervisedLearning_FinalProject.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNNw4sVb1uXbvOfHg2+29h/"
+      "authorship_tag": "ABX9TyOJgqKDI3y5ZJvX69EnKakS"
     },
     "kernelspec": {
       "name": "python3",
@@ -2057,11 +2057,24 @@
       "source": [
         "# References\n",
         "\n",
-        "Joakim Arvidsson. (2023). Diabetes Factors. Kaggle.com. https://www.kaggle.com/datasets/joebeachcapital/diabetes-factors"
+        "Joakim Arvidsson. (2023). Diabetes Factors. Kaggle.com. https://www.kaggle.com/datasets/joebeachcapital/diabetes-factors\n",
+        "\n",
+        "## GitHub link\n",
+        "\n",
+        "https://github.com/thash/cuboulder/blob/main/introduction-to-machine-learning-supervised-learning/cuboulder_SupervisedLearning_FinalProject.ipynb"
       ],
       "metadata": {
         "id": "bK2GCv1E_gAb"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "YQ3QTZpOCAYh"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
